# mcp-rlm-proxy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  mcp.json  mcp.json.example  proxy_server.py  pyproject.toml  test_capabilities.py  test_echo_with_meta.py  test_proxy.py  test_schema_enhancement.py  update_config_refs.py
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  LOGGING.md  MIDDLEWARE_ADOPTION.md  MIGRATION_GUIDE.md  PERFORMANCE.md  QUICK_REFERENCE.md  README.md  SUMMARY.md
examples/: README.md  comprehensive_example.py  example_usage.py
src/mcp_proxy/: __init__.py  __main__.py  advanced_search.py  cache.py  config.py  executor_manager.py  logging_config.py  processors.py  rlm_processor.py  server.py
tests/: __init__.py  test_cache.py  test_config.py  test_echo_with_meta.py  test_everything_direct.py  test_processors.py  test_projection_grep.py  test_proxy.py  test_quick.py  test_schema_enhancement.py  test_with_everything.py
