[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-rlm-proxy"
version = "0.1.0"
description = "MCP-RLM-Proxy: Intelligent MCP middleware with RLM-style recursive exploration, smart caching, and proxy tools."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "MCP-RLM-Proxy Contributors"}
]
keywords = ["mcp", "model-context-protocol", "proxy", "llm", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "mcp>=1.23.1",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/pratikjadhav2726/mcp-rlm-proxy"
Documentation = "https://github.com/pratikjadhav2726/mcp-rlm-proxy#readme"
Repository = "https://github.com/pratikjadhav2726/mcp-rlm-proxy"
Issues = "https://github.com/pratikjadhav2726/mcp-rlm-proxy/issues"

[project.scripts]
mcp-proxy = "mcp_proxy.__main__:main"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_proxy"]
